[gd_scene load_steps=4 format=3 uid="uid://dkk2cilj1ivi3"]

[ext_resource type="Script" uid="uid://b7iapth3xih8j" path="res://scripts/pause_menu.gd" id="1_qdk1p"]
[ext_resource type="Script" uid="uid://cnb7qnlpljrot" path="res://scripts/settingsmenu.gd" id="2_jjqb4"]
[ext_resource type="Script" uid="uid://dnkx8y2h2m6u1" path="res://menu_scenes/infomenu.gd" id="3_jjqb4"]

[node name="Menus" type="CanvasLayer"]

[node name="PauseMenu" type="Panel" parent="."]
process_mode = 3
clip_contents = true
offset_right = 320.0
offset_bottom = 320.0
script = ExtResource("1_qdk1p")
metadata/_edit_use_anchors_ = true

[node name="ResumeButton" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Resume "

[node name="SettingsButton" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_top = 40.0
offset_right = 70.0
offset_bottom = 71.0
text = "Settings"

[node name="LevelSelectorButton" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_top = 80.0
offset_right = 115.0
offset_bottom = 111.0
text = "Level Selector"

[node name="InfoButton" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_top = 120.0
offset_right = 42.0
offset_bottom = 151.0
text = "Info"

[node name="QuitButton" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_top = 160.0
offset_right = 42.0
offset_bottom = 191.0
text = "Quit"

[node name="SettingsMenu" type="Panel" parent="."]
offset_right = 300.0
offset_bottom = 300.0
script = ExtResource("2_jjqb4")
metadata/_edit_use_anchors_ = true

[node name="MasterVolumeSlider" type="HSlider" parent="SettingsMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.613333
anchor_right = 0.613333
offset_left = 50.0
offset_top = 140.0
offset_right = 150.0
offset_bottom = 156.0
rotation = 4.71239
min_value = -80.0
max_value = 0.0
value = -40.0
tick_count = 1
metadata/_edit_use_anchors_ = true

[node name="MusicVolumeSlider" type="HSlider" parent="SettingsMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.426667
anchor_right = 0.426667
offset_left = 50.0
offset_top = 140.0
offset_right = 150.0
offset_bottom = 156.0
rotation = 4.71239
min_value = -60.0
max_value = 20.0
tick_count = 1
metadata/_edit_use_anchors_ = true

[node name="BackButton" type="Button" parent="SettingsMenu"]
layout_mode = 0
offset_top = 120.0
offset_right = 45.0
offset_bottom = 151.0
text = "Back"
metadata/_edit_use_anchors_ = true

[node name="InfoMenu" type="Panel" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_jjqb4")

[node name="RichTextLabel" type="RichTextLabel" parent="InfoMenu"]
layout_mode = 0
offset_left = 78.0
offset_top = 37.0
offset_right = 265.0
offset_bottom = 257.0
text = "The goal of the game is to complete each level by making it to the portal. 
Hard mode levels are unlocked by also collecting all of the stars in each level.

Arrow keys to move around (Can also jump on space)
Double jump resets after successfully grappling to a wall and breaking off before collision occurs."

[node name="BackButton" type="Button" parent="InfoMenu"]
layout_mode = 1
anchors_preset = -1
anchor_top = -2.0
anchor_bottom = -2.0
offset_top = 120.0
offset_right = 45.0
offset_bottom = 151.0
text = "Back"
metadata/_edit_use_anchors_ = true
